// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Domain/EntitySearch Many Items 1`] = `
<div
  className="dd flex-column h-100"
>
  <div
    className="dd flex-row dd"
  >
    <input
      className="dd text-body1 input dd flex-grow"
      onChange={[Function]}
      type="text"
      value=""
    />
    <button
      className="dd button has-background hoverable text-button is-rounded"
      onClick={[Function]}
      type="button"
    >
      Toggle list/map
    </button>
  </div>
  <div
    className="dd list-container dd flex-grow overflow-y-scroll"
  >
    <button
      className="dd button has-background hoverable text-button is-rounded"
      onClick={[Function]}
      type="button"
    >
      Foo: Foo 1
      <span
        className="dd has-background text-caption p-1 is-rounded ml-1 bg-primary"
      >
        published
      </span>
    </button>
    <button
      className="dd button has-background hoverable text-button is-rounded"
      onClick={[Function]}
      type="button"
    >
      Foo: Foo archived
      <span
        className="dd has-background text-caption p-1 is-rounded ml-1 bg-danger"
      >
        archived
      </span>
    </button>
    <button
      className="dd button has-background hoverable text-button is-rounded"
      onClick={[Function]}
      type="button"
    >
      Bar: Bar 1
      <span
        className="dd has-background text-caption p-1 is-rounded ml-1"
      >
        draft
      </span>
    </button>
    <button
      className="dd button has-background hoverable text-button is-rounded"
      onClick={[Function]}
      type="button"
    >
      Bar: Bar 2
      <span
        className="dd has-background text-caption p-1 is-rounded ml-1"
      >
        draft
      </span>
    </button>
    <button
      className="dd button has-background hoverable text-button is-rounded"
      onClick={[Function]}
      type="button"
    >
      Baz: Baz 1
      <span
        className="dd has-background text-caption p-1 is-rounded ml-1"
      >
        draft
      </span>
    </button>
    <button
      className="dd button has-background hoverable text-button is-rounded"
      onClick={[Function]}
      type="button"
    >
      Bar: Generated bar 0
      <span
        className="dd has-background text-caption p-1 is-rounded ml-1"
      >
        draft
      </span>
    </button>
    <button
      className="dd button has-background hoverable text-button is-rounded"
      onClick={[Function]}
      type="button"
    >
      Bar: Generated bar 1
      <span
        className="dd has-background text-caption p-1 is-rounded ml-1"
      >
        draft
      </span>
    </button>
    <button
      className="dd button has-background hoverable text-button is-rounded"
      onClick={[Function]}
      type="button"
    >
      Bar: Generated bar 2
      <span
        className="dd has-background text-caption p-1 is-rounded ml-1"
      >
        draft
      </span>
    </button>
    <button
      className="dd button has-background hoverable text-button is-rounded"
      onClick={[Function]}
      type="button"
    >
      Bar: Generated bar 3
      <span
        className="dd has-background text-caption p-1 is-rounded ml-1"
      >
        draft
      </span>
    </button>
    <button
      className="dd button has-background hoverable text-button is-rounded"
      onClick={[Function]}
      type="button"
    >
      Bar: Generated bar 4
      <span
        className="dd has-background text-caption p-1 is-rounded ml-1"
      >
        draft
      </span>
    </button>
    <button
      className="dd button has-background hoverable text-button is-rounded"
      onClick={[Function]}
      type="button"
    >
      Bar: Generated bar 5
      <span
        className="dd has-background text-caption p-1 is-rounded ml-1"
      >
        draft
      </span>
    </button>
    <button
      className="dd button has-background hoverable text-button is-rounded"
      onClick={[Function]}
      type="button"
    >
      Bar: Generated bar 6
      <span
        className="dd has-background text-caption p-1 is-rounded ml-1"
      >
        draft
      </span>
    </button>
    <button
      className="dd button has-background hoverable text-button is-rounded"
      onClick={[Function]}
      type="button"
    >
      Bar: Generated bar 7
      <span
        className="dd has-background text-caption p-1 is-rounded ml-1"
      >
        draft
      </span>
    </button>
    <button
      className="dd button has-background hoverable text-button is-rounded"
      onClick={[Function]}
      type="button"
    >
      Bar: Generated bar 8
      <span
        className="dd has-background text-caption p-1 is-rounded ml-1"
      >
        draft
      </span>
    </button>
    <button
      className="dd button has-background hoverable text-button is-rounded"
      onClick={[Function]}
      type="button"
    >
      Bar: Generated bar 9
      <span
        className="dd has-background text-caption p-1 is-rounded ml-1"
      >
        draft
      </span>
    </button>
    <button
      className="dd button has-background hoverable text-button is-rounded"
      onClick={[Function]}
      type="button"
    >
      Bar: Generated bar 10
      <span
        className="dd has-background text-caption p-1 is-rounded ml-1"
      >
        draft
      </span>
    </button>
    <button
      className="dd button has-background hoverable text-button is-rounded"
      onClick={[Function]}
      type="button"
    >
      Bar: Generated bar 11
      <span
        className="dd has-background text-caption p-1 is-rounded ml-1"
      >
        draft
      </span>
    </button>
    <button
      className="dd button has-background hoverable text-button is-rounded"
      onClick={[Function]}
      type="button"
    >
      Bar: Generated bar 12
      <span
        className="dd has-background text-caption p-1 is-rounded ml-1"
      >
        draft
      </span>
    </button>
    <button
      className="dd button has-background hoverable text-button is-rounded"
      onClick={[Function]}
      type="button"
    >
      Bar: Generated bar 13
      <span
        className="dd has-background text-caption p-1 is-rounded ml-1"
      >
        draft
      </span>
    </button>
    <button
      className="dd button has-background hoverable text-button is-rounded"
      onClick={[Function]}
      type="button"
    >
      Bar: Generated bar 14
      <span
        className="dd has-background text-caption p-1 is-rounded ml-1"
      >
        draft
      </span>
    </button>
    <button
      className="dd button has-background hoverable text-button is-rounded"
      onClick={[Function]}
      type="button"
    >
      Bar: Generated bar 15
      <span
        className="dd has-background text-caption p-1 is-rounded ml-1"
      >
        draft
      </span>
    </button>
    <button
      className="dd button has-background hoverable text-button is-rounded"
      onClick={[Function]}
      type="button"
    >
      Bar: Generated bar 16
      <span
        className="dd has-background text-caption p-1 is-rounded ml-1"
      >
        draft
      </span>
    </button>
    <button
      className="dd button has-background hoverable text-button is-rounded"
      onClick={[Function]}
      type="button"
    >
      Bar: Generated bar 17
      <span
        className="dd has-background text-caption p-1 is-rounded ml-1"
      >
        draft
      </span>
    </button>
    <button
      className="dd button has-background hoverable text-button is-rounded"
      onClick={[Function]}
      type="button"
    >
      Bar: Generated bar 18
      <span
        className="dd has-background text-caption p-1 is-rounded ml-1"
      >
        draft
      </span>
    </button>
    <button
      className="dd button has-background hoverable text-button is-rounded"
      onClick={[Function]}
      type="button"
    >
      Bar: Generated bar 19
      <span
        className="dd has-background text-caption p-1 is-rounded ml-1"
      >
        draft
      </span>
    </button>
    <div
      className="dd flex-row"
    >
      <button
        className="dd button has-background hoverable text-button is-rounded"
        disabled={true}
        type="button"
      >
        Start
      </button>
      <button
        className="dd button has-background hoverable text-button is-rounded"
        disabled={true}
        type="button"
      >
        Previous
      </button>
      <button
        className="dd button has-background hoverable text-button is-rounded"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Next
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Domain/EntitySearch Many Items Small Size 1`] = `
<div
  style={
    Object {
      "border": "1px solid black",
      "height": "200px",
      "marginBottom": "auto",
      "marginTop": "auto",
      "width": "100%",
    }
  }
>
  <div
    className="dd flex-column h-100"
  >
    <div
      className="dd flex-row dd"
    >
      <input
        className="dd text-body1 input dd flex-grow"
        onChange={[Function]}
        type="text"
        value=""
      />
      <button
        className="dd button has-background hoverable text-button is-rounded"
        onClick={[Function]}
        type="button"
      >
        Toggle list/map
      </button>
    </div>
    <div
      className="dd list-container dd flex-grow overflow-y-scroll"
    >
      <button
        className="dd button has-background hoverable text-button is-rounded"
        onClick={[Function]}
        type="button"
      >
        Foo: Foo 1
        <span
          className="dd has-background text-caption p-1 is-rounded ml-1 bg-primary"
        >
          published
        </span>
      </button>
      <button
        className="dd button has-background hoverable text-button is-rounded"
        onClick={[Function]}
        type="button"
      >
        Foo: Foo archived
        <span
          className="dd has-background text-caption p-1 is-rounded ml-1 bg-danger"
        >
          archived
        </span>
      </button>
      <button
        className="dd button has-background hoverable text-button is-rounded"
        onClick={[Function]}
        type="button"
      >
        Bar: Bar 1
        <span
          className="dd has-background text-caption p-1 is-rounded ml-1"
        >
          draft
        </span>
      </button>
      <button
        className="dd button has-background hoverable text-button is-rounded"
        onClick={[Function]}
        type="button"
      >
        Bar: Bar 2
        <span
          className="dd has-background text-caption p-1 is-rounded ml-1"
        >
          draft
        </span>
      </button>
      <button
        className="dd button has-background hoverable text-button is-rounded"
        onClick={[Function]}
        type="button"
      >
        Baz: Baz 1
        <span
          className="dd has-background text-caption p-1 is-rounded ml-1"
        >
          draft
        </span>
      </button>
      <button
        className="dd button has-background hoverable text-button is-rounded"
        onClick={[Function]}
        type="button"
      >
        Bar: Generated bar 0
        <span
          className="dd has-background text-caption p-1 is-rounded ml-1"
        >
          draft
        </span>
      </button>
      <button
        className="dd button has-background hoverable text-button is-rounded"
        onClick={[Function]}
        type="button"
      >
        Bar: Generated bar 1
        <span
          className="dd has-background text-caption p-1 is-rounded ml-1"
        >
          draft
        </span>
      </button>
      <button
        className="dd button has-background hoverable text-button is-rounded"
        onClick={[Function]}
        type="button"
      >
        Bar: Generated bar 2
        <span
          className="dd has-background text-caption p-1 is-rounded ml-1"
        >
          draft
        </span>
      </button>
      <button
        className="dd button has-background hoverable text-button is-rounded"
        onClick={[Function]}
        type="button"
      >
        Bar: Generated bar 3
        <span
          className="dd has-background text-caption p-1 is-rounded ml-1"
        >
          draft
        </span>
      </button>
      <button
        className="dd button has-background hoverable text-button is-rounded"
        onClick={[Function]}
        type="button"
      >
        Bar: Generated bar 4
        <span
          className="dd has-background text-caption p-1 is-rounded ml-1"
        >
          draft
        </span>
      </button>
      <button
        className="dd button has-background hoverable text-button is-rounded"
        onClick={[Function]}
        type="button"
      >
        Bar: Generated bar 5
        <span
          className="dd has-background text-caption p-1 is-rounded ml-1"
        >
          draft
        </span>
      </button>
      <button
        className="dd button has-background hoverable text-button is-rounded"
        onClick={[Function]}
        type="button"
      >
        Bar: Generated bar 6
        <span
          className="dd has-background text-caption p-1 is-rounded ml-1"
        >
          draft
        </span>
      </button>
      <button
        className="dd button has-background hoverable text-button is-rounded"
        onClick={[Function]}
        type="button"
      >
        Bar: Generated bar 7
        <span
          className="dd has-background text-caption p-1 is-rounded ml-1"
        >
          draft
        </span>
      </button>
      <button
        className="dd button has-background hoverable text-button is-rounded"
        onClick={[Function]}
        type="button"
      >
        Bar: Generated bar 8
        <span
          className="dd has-background text-caption p-1 is-rounded ml-1"
        >
          draft
        </span>
      </button>
      <button
        className="dd button has-background hoverable text-button is-rounded"
        onClick={[Function]}
        type="button"
      >
        Bar: Generated bar 9
        <span
          className="dd has-background text-caption p-1 is-rounded ml-1"
        >
          draft
        </span>
      </button>
      <button
        className="dd button has-background hoverable text-button is-rounded"
        onClick={[Function]}
        type="button"
      >
        Bar: Generated bar 10
        <span
          className="dd has-background text-caption p-1 is-rounded ml-1"
        >
          draft
        </span>
      </button>
      <button
        className="dd button has-background hoverable text-button is-rounded"
        onClick={[Function]}
        type="button"
      >
        Bar: Generated bar 11
        <span
          className="dd has-background text-caption p-1 is-rounded ml-1"
        >
          draft
        </span>
      </button>
      <button
        className="dd button has-background hoverable text-button is-rounded"
        onClick={[Function]}
        type="button"
      >
        Bar: Generated bar 12
        <span
          className="dd has-background text-caption p-1 is-rounded ml-1"
        >
          draft
        </span>
      </button>
      <button
        className="dd button has-background hoverable text-button is-rounded"
        onClick={[Function]}
        type="button"
      >
        Bar: Generated bar 13
        <span
          className="dd has-background text-caption p-1 is-rounded ml-1"
        >
          draft
        </span>
      </button>
      <button
        className="dd button has-background hoverable text-button is-rounded"
        onClick={[Function]}
        type="button"
      >
        Bar: Generated bar 14
        <span
          className="dd has-background text-caption p-1 is-rounded ml-1"
        >
          draft
        </span>
      </button>
      <button
        className="dd button has-background hoverable text-button is-rounded"
        onClick={[Function]}
        type="button"
      >
        Bar: Generated bar 15
        <span
          className="dd has-background text-caption p-1 is-rounded ml-1"
        >
          draft
        </span>
      </button>
      <button
        className="dd button has-background hoverable text-button is-rounded"
        onClick={[Function]}
        type="button"
      >
        Bar: Generated bar 16
        <span
          className="dd has-background text-caption p-1 is-rounded ml-1"
        >
          draft
        </span>
      </button>
      <button
        className="dd button has-background hoverable text-button is-rounded"
        onClick={[Function]}
        type="button"
      >
        Bar: Generated bar 17
        <span
          className="dd has-background text-caption p-1 is-rounded ml-1"
        >
          draft
        </span>
      </button>
      <button
        className="dd button has-background hoverable text-button is-rounded"
        onClick={[Function]}
        type="button"
      >
        Bar: Generated bar 18
        <span
          className="dd has-background text-caption p-1 is-rounded ml-1"
        >
          draft
        </span>
      </button>
      <button
        className="dd button has-background hoverable text-button is-rounded"
        onClick={[Function]}
        type="button"
      >
        Bar: Generated bar 19
        <span
          className="dd has-background text-caption p-1 is-rounded ml-1"
        >
          draft
        </span>
      </button>
      <div
        className="dd flex-row"
      >
        <button
          className="dd button has-background hoverable text-button is-rounded"
          disabled={true}
          type="button"
        >
          Start
        </button>
        <button
          className="dd button has-background hoverable text-button is-rounded"
          disabled={true}
          type="button"
        >
          Previous
        </button>
        <button
          className="dd button has-background hoverable text-button is-rounded"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Next
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Domain/EntitySearch Normal 1`] = `
<div
  className="dd flex-column h-100"
>
  <div
    className="dd flex-row dd"
  >
    <input
      className="dd text-body1 input dd flex-grow"
      onChange={[Function]}
      type="text"
      value=""
    />
    <button
      className="dd button has-background hoverable text-button is-rounded"
      onClick={[Function]}
      type="button"
    >
      Toggle list/map
    </button>
  </div>
  <div
    className="dd list-container dd flex-grow overflow-y-scroll"
  >
    <button
      className="dd button has-background hoverable text-button is-rounded"
      onClick={[Function]}
      type="button"
    >
      Foo: Foo 1
      <span
        className="dd has-background text-caption p-1 is-rounded ml-1 bg-primary"
      >
        published
      </span>
    </button>
    <button
      className="dd button has-background hoverable text-button is-rounded"
      onClick={[Function]}
      type="button"
    >
      Foo: Foo archived
      <span
        className="dd has-background text-caption p-1 is-rounded ml-1 bg-danger"
      >
        archived
      </span>
    </button>
    <button
      className="dd button has-background hoverable text-button is-rounded"
      onClick={[Function]}
      type="button"
    >
      Bar: Bar 1
      <span
        className="dd has-background text-caption p-1 is-rounded ml-1"
      >
        draft
      </span>
    </button>
    <button
      className="dd button has-background hoverable text-button is-rounded"
      onClick={[Function]}
      type="button"
    >
      Bar: Bar 2
      <span
        className="dd has-background text-caption p-1 is-rounded ml-1"
      >
        draft
      </span>
    </button>
    <button
      className="dd button has-background hoverable text-button is-rounded"
      onClick={[Function]}
      type="button"
    >
      Baz: Baz 1
      <span
        className="dd has-background text-caption p-1 is-rounded ml-1"
      >
        draft
      </span>
    </button>
    <div
      className="dd flex-row"
    >
      <button
        className="dd button has-background hoverable text-button is-rounded"
        disabled={true}
        type="button"
      >
        Start
      </button>
      <button
        className="dd button has-background hoverable text-button is-rounded"
        disabled={true}
        type="button"
      >
        Previous
      </button>
      <button
        className="dd button has-background hoverable text-button is-rounded"
        disabled={true}
        type="button"
      >
        Next
      </button>
    </div>
  </div>
</div>
`;
